Add SmartGimbalController project to portfolio

--- a/index.html
+++ b/index.html
@@ -84,6 +84,22 @@
             <div class="project-grid">
                 <div class="project-card">
                     <div class="project-content">
+                        <h3>Smart Gimbal Controller</h3>
+                        <p>Comprehensive control software for DroneTools' Smart Gimbal solution with advanced stabilization, targeting, and mapping capabilities</p>
+                        <div class="project-tags">
+                            <span>JavaScript</span>
+                            <span>C#</span>
+                            <span>HTML/CSS</span>
+                            <span>Gimbal Systems</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/OmerMersin/SmartGimbalController" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="project-card">
+                    <div class="project-content">
                         <h3>Drone Track</h3>
                         <p>DeepStream-Based Object Tracking and Guidance for MAVLink Drones</p>
                         <div class="project-tags">
@@ -123,21 +139,6 @@
                         </div>
                         <div class="project-links">
                             <a href="https://github.com/OmerMersin/RoboTaxi" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-                        </div>
-                    </div>
-                </div>
-                
-                <div class="project-card">
-                    <div class="project-content">
-                        <h3>SLabel</h3>
-                        <p>Fast labeling application with automatic labeling using pre-trained models</p>
-                        <div class="project-tags">
-                            <span>Python</span>
-                            <span>Machine Learning</span>
-                            <span>Data Labeling</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="https://github.com/OmerMersin/SLabel" target="_blank"><i class="fab fa-github"></i> GitHub</a>
                         </div>
                     </div>
                 </div>
