Replace text logo with OM_logo.png image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <header>
         <div class="container">
             <nav>
-                <div class="logo">ÖM</div>
+                <div class="logo">
+                    <img src="OM_logo.png" alt="Ömer Mersin Logo">
+                </div>
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -87,8 +89,8 @@
                         <h3>Smart Gimbal Controller</h3>
                         <p>Comprehensive control software for DroneTools' Smart Gimbal solution with advanced stabilization, targeting, and mapping capabilities</p>
                         <div class="project-tags">
-                            <span>JavaScript</span>
                             <span>C#</span>
+                            <span>JavaScript</span>
                             <span>HTML/CSS</span>
                             <span>Gimbal Systems</span>
                         </div>
@@ -124,21 +126,6 @@
                         </div>
                         <div class="project-links">
                             <a href="https://github.com/OmerMersin/video-stab" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-                        </div>
-                    </div>
-                </div>
-                
-                <div class="project-card">
-                    <div class="project-content">
-                        <h3>RoboTaxi</h3>
-                        <p>Autonomous vehicle project featuring self-driving capabilities</p>
-                        <div class="project-tags">
-                            <span>Python</span>
-                            <span>Autonomous Systems</span>
-                            <span>Robotics</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="https://github.com/OmerMersin/RoboTaxi" target="_blank"><i class="fab fa-github"></i> GitHub</a>
                         </div>
                     </div>
                 </div>
