Replace resume.pdf with Omer_Mersin_Resume.pdf

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <span>Explore My Work</span>
                         <i class="fas fa-arrow-right"></i>
                     </a>
-                    <a href="resume.pdf" class="btn secondary" target="_blank" rel="noopener noreferrer">
+                    <a href="Omer_Mersin_Resume.pdf" class="btn secondary" target="_blank" rel="noopener noreferrer">
                         <i class="fas fa-file-alt"></i>
                         <span>View Resume</span>
                     </a>
